--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,13 +1,13 @@
 <h1>Introduction</h1>
-<p>組長:<span>40823111 許耀中0</span></p>
+<p>組長:<a href="https://40823111.github.io/cd2021/content/index.html">40823111 許耀中</a></p>
 <p>組員:</p>
-<p>40823115 黃歸吉</p>
-<p>40823120 范維倫</p>
-<p>40823124 廖璟程</p>
-<p>40823126 楊育翔</p>
-<p>40823128 曾鑵<span>斁</span></p>
-<p><span>40823139 王銘楫</span></p>
-<p>40823140 林子恩</p>
+<p><a href="https://40823115.github.io/cd2021/content/index.html">40823115 黃歸吉</a></p>
+<p><a href="https://40823120.github.io/cd2021">40823120 范維倫</a></p>
+<p><a href="https://40823124.github.io/cd2021/content/index.html">40823124 廖璟程</a></p>
+<p><a href="https://40823126.github.io/cd2021/content/w5.html">40823126 楊育翔</a></p>
+<p><a href="https://40823128.github.io/cd2021/content/index.html">40823128 曾鑵<span>斁</span></a></p>
+<p><a href="https://40823139.github.io/cd2021/content/index.html">40823139 王銘楫</a></p>
+<p><a href="https://40823140.github.io/cd2021/content/index.html">40823140 林子恩</a></p>
 <h1>Stage1,2</h1>
 <h3>stage1</h3>
 <h4>ag6</h4>
