--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,13 +1,13 @@
 <h1>Introduction</h1>
-<p>組長:<span>40823111 許耀中0</span></p>
+<p>組長:<a href="https://40823111.github.io/cd2021/content/index.html">40823111 許耀中</a></p>
 <p>組員:</p>
-<p>40823115 黃歸吉</p>
-<p>40823120 范維倫</p>
-<p>40823124 廖璟程</p>
-<p>40823126 楊育翔</p>
-<p>40823128 曾鑵<span>斁</span></p>
-<p><span>40823139 王銘楫</span></p>
-<p>40823140 林子恩</p>
+<p><a href="https://40823115.github.io/cd2021/content/index.html">40823115 黃歸吉</a></p>
+<p><a href="https://40823120.github.io/cd2021">40823120 范維倫</a></p>
+<p><a href="https://40823124.github.io/cd2021/content/index.html">40823124 廖璟程</a></p>
+<p><a href="https://40823126.github.io/cd2021/content/w5.html">40823126 楊育翔</a></p>
+<p><a href="https://40823128.github.io/cd2021/content/index.html">40823128 曾鑵<span>斁</span></a></p>
+<p><a href="https://40823139.github.io/cd2021/content/index.html">40823139 王銘楫</a></p>
+<p><a href="https://40823140.github.io/cd2021/content/index.html">40823140 林子恩</a></p>
 <h1>Stage1,2</h1>
 <h3>stage1</h3>
 <h4>ag6</h4>
@@ -340,4 +340,11 @@ end
 <h2>40823120</h2>
 <p>40823120 小組貢獻<br/>在這學期主要負責的是倉儲的管理推送，設計產品和程式。<br/>stage1因為是兩個人分組所以分組很明確，我負責畫圖和管理網站以及部分程式。<br/>stage2是四個人一組分工得更為明確我個人負責模擬與產品設計，另一組負責程式設計。<br/>stage3是沿用我們stage2所設計的機構加以改善本來是打擊球用手套去接，後來覺得過度理想化所以想用固定一軸的方式使他每次的飛行都一樣。</p>
 <p>心得:<br/>Week16的作業對我自己來說真的很難，我比較擅長的是偏向畫圖和產品模擬所以在第一部分onshape那操作得很順手<br/>而到第二階段以後卡了很久，與小組的組員開metting後和參考了別人的影片才把第二階段的程式看懂，第三階段的吸盤一開始看不太懂如何操作後來發現他需要打開第二個節點那的程式，逆向那很複雜，一開始也不懂逆向是什麼意思，後來查完資料才知道，本來是我們要主動地去操作，需要把它變成自己去捕捉，API的部分丟小白框的時候他一start就馬上exit後來發現我少了keyboard所以我需要到小黑框裡輸入pip install keyboard接著去修改小白框裡的IP位址然後就可以使用API了。</p>
-<p><span></span></p>
+<br/><br/><br/><span></span>40823115
+<p>stage1我們自做自動折一機，我負責coppeliasim模擬因為是第一次使用所以完全不會我就從網路上看影片學習。看了這影片後我就完成了stage1的大部分模擬</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/1gigZiSRgu8" title="YouTube video player" width="560"></iframe></p>
+<p>學習的影片</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/DPSv6tDADvU" title="YouTube video player" width="560"></iframe></p>
+<p>stage2我也是負責<span>coppeliasim模擬但我們發現怎麼模擬到最後都法轉動最後整隻馬都會亂跑</span></p>
+<p>stage3我們跟另外一組合聘最後延續另外那組的stage2把原本沒有做好的部分變得更加好</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/OGqlntKWYS0" title="YouTube video player" width="560"></iframe></p>
