--- a/content/40823115.html
+++ b/content/40823115.html
@@ -134,10 +134,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <a href='FINAL.html'>Next</a> >> FINAL<br /><h1>w18</h1>
-<p>最後結論</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/utQbjYkU7lA" title="YouTube video player" width="560"></iframe></p>
-<br />w16 << <a href='w16.html'>Previous</a> <a href='FINAL.html'>Next</a> >> FINAL</div>
+    <div id="tipue_search_content">40823120 << <a href='40823120.html'>Previous</a> <br /><h1>40823115</h1>
+<p>stage1我們自做自動折一機，我負責coppeliasim模擬因為是第一次使用所以完全不會我就從網路上看影片學習。看了這影片後我就完成了stage1的大部分模擬</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/1gigZiSRgu8" title="YouTube video player" width="560"></iframe></p>
+<p>學習的影片</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/DPSv6tDADvU" title="YouTube video player" width="560"></iframe></p>
+<p>stage2我也是負責<span>coppeliasim模擬但我們發現怎麼模擬到最後都法轉動最後整隻馬都會亂跑</span></p>
+<p>stage3我們跟另外一組合聘最後延續另外那組的stage2把原本沒有做好的部分變得更加好</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/OGqlntKWYS0" title="YouTube video player" width="560"></iframe></p><br />40823120 << <a href='40823120.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
