--- a/content/40823115.html
+++ b/content/40823115.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='task3-1.html'>task3-1</a></li></ul><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='FINAL.html'>FINAL</a><ul class='dropdown'><li><a href='40823124.html'>40823124</a><li><a href='40823128.html'>40823128</a><li><a href='40823120.html'>40823120</a><li><a href='40823115.html'>40823115</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='task3-1.html'>task3-1</a></li></ul><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='FINAL.html'>FINAL</a><ul class='dropdown'><li><a href='40823124.html'>40823124</a><li><a href='40823128.html'>40823128</a><li><a href='40823120.html'>40823120</a><li><a href='40823115.html'>40823115</a><li><a href='40823140.html'>40823140</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,14 +134,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">40823120 << <a href='40823120.html'>Previous</a> <br /><h1>40823115</h1>
+    <div id="tipue_search_content">40823120 << <a href='40823120.html'>Previous</a> <a href='40823140.html'>Next</a> >> 40823140<br /><h1>40823115</h1>
 <p>stage1我們自做自動折一機，我負責coppeliasim模擬因為是第一次使用所以完全不會我就從網路上看影片學習。看了這影片後我就完成了stage1的大部分模擬</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/1gigZiSRgu8" title="YouTube video player" width="560"></iframe></p>
 <p>學習的影片</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/DPSv6tDADvU" title="YouTube video player" width="560"></iframe></p>
 <p>stage2我也是負責<span>coppeliasim模擬但我們發現怎麼模擬到最後都法轉動最後整隻馬都會亂跑</span></p>
 <p>stage3我們跟另外一組合聘最後延續另外那組的stage2把原本沒有做好的部分變得更加好</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/OGqlntKWYS0" title="YouTube video player" width="560"></iframe></p><br />40823120 << <a href='40823120.html'>Previous</a> </div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/OGqlntKWYS0" title="YouTube video player" width="560"></iframe></p>
+=======
+<br />40823120 << <a href='40823120.html'>Previous</a> <a href='40823140.html'>Next</a> >> 40823140</div>
         
     <!-- footer -->
       <div class="container">
